2.7 BGE: No collisions detected with parented rigid body object #39026

Closed
opened 2014-03-07 16:03:45 +01:00 by Valentin · 11 comments

System Information
Debian jessie/sid, Intel Corporation 3rd Gen Core processor Graphics Controller (rev 09)

Blender Version
Broken: 2.7 19f7f9a
Worked: 2.69 r60991

Short description of error
A collision sensor on an object, which is parented to another with the Set Parent Actuator (with parenting the object before the game starts it works), does not detect a collision with another Rigid Body object. It worked fine in 2.69.

Exact steps for others to reproduce the error

  • Add an object and set physics type to Rigid Body
  • Add a property
  • Add two other objects
  • One to be parented and collide: Add an Always sensor with a Set Parent Actuator to it and set the Parent Object to the third object. Add an collision sensor with an end object actuator so the object should end on collision with the first object.
  • Arrange the objects that the first and the second object will collide (with an animation or something)
  • Run the game

Here the same in a file: parented_collision.blend

**System Information** Debian jessie/sid, Intel Corporation 3rd Gen Core processor Graphics Controller (rev 09) **Blender Version** Broken: 2.7 19f7f9a Worked: 2.69 r60991 **Short description of error** A collision sensor on an object, which is parented to another with the Set Parent Actuator (with parenting the object before the game starts it works), does not detect a collision with another Rigid Body object. It worked fine in 2.69. **Exact steps for others to reproduce the error** - Add an object and set physics type to Rigid Body - Add a property - Add two other objects - One to be parented and collide: Add an Always sensor with a Set Parent Actuator to it and set the Parent Object to the third object. Add an collision sensor with an end object actuator so the object should end on collision with the first object. - Arrange the objects that the first and the second object will collide (with an animation or something) - Run the game Here the same in a file: [parented_collision.blend](https://archive.blender.org/developer/F80223/parented_collision.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @blenderscripter

Added subscriber: @blenderscripter
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

I confirm the Bug in 2.70. In 2.69 it worked.

Systems tried:
Windows 7 64 bits/ Nvidia Quadro 2000
Opensuse 13.1 64 bits / Nvidia 240 GT

I confirm the Bug in 2.70. In 2.69 it worked. `Systems tried:` Windows 7 64 bits/ Nvidia Quadro 2000 Opensuse 13.1 64 bits / Nvidia 240 GT
Author

I think I fixed it in D446. It's my first bug fix, so maybe someone should review it.

I think I fixed it in [D446](https://archive.blender.org/developer/D446). It's my first bug fix, so maybe someone should review it.
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Valentin self-assigned this 2014-04-04 21:16:32 +02:00
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

I open this bug because it is not resolved yet

I open this bug because it is not resolved yet

This issue was referenced by 9e217ccb2e

This issue was referenced by 9e217ccb2e111e051b2835a518fba02ffe97bfe3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 9e217ccb2e.

Closed by commit 9e217ccb2e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39026
No description provided.